правит имена классов по БЭМ

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="main-page">
-    <div style="display:none">
+    <div style="display: none">
       <include src="source/img/sprite.svg"></include>
     </div>
   <header class="header header__main-page header--closed">
@@ -99,7 +99,7 @@
     </article>
   </header>
 
-  <main class="main-page-content">
+  <main class="main-page__content">
     <div class="main-page__wrapper">
       <h1 class="visually-hidden">Главная страница сайта приложения Pink</h1>
       <div class="promo">
@@ -337,7 +337,7 @@
         </div>
       </div>
     </section>
-    <div class="contacts__map-box contacts__map" id="map__canvas"></div>
+    <div class="map" id="map__canvas"></div>
   </main>
 
   <footer class="footer footer__main-page container">
@@ -382,7 +382,7 @@
       </a>
     </div>
   </footer>
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
   <script src="js/script.js"></script>
 </body>
 
