добавляет интерактивное состояние при фокусе и делает правки по стайллинтеру

--- a/source/form.html
+++ b/source/form.html
@@ -64,7 +64,8 @@
 
   <main class="competition">
     <div class="competition__wrapper">
-      <h2 class="competition__text">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
+      <h2 class="competition__text">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу
+        бонусную карту!
         <span class="competition__hidden-text">Пожалуйста, заполните форму ниже:</span>
       </h2>
       <form class="competition__form" action="https://echo.htmlacademy.ru" method="post">
@@ -73,11 +74,13 @@
           <div class="filters-group__narrow">
             <p class="input-block__item input-block__item--input">
               <label class="input-block__fullname-label" for="surname-field">Фамилия:</label>
-              <input type="text" class="input-block__input" name="surname" id="surname-field" placeholder="Укажите фамилию *" autofocus required>
+              <input type="text" class="input-block__input" name="surname" id="surname-field" placeholder="Укажите фамилию *"
+                autofocus required>
             </p>
             <p class="input-block__item  input-block__item--input">
               <label class="input-block__fullname-label" for="name-field">Имя:</label>
-              <input type="text" class="input-block__input" name="name" id="name-field" placeholder="Введите ваше имя *" required>
+              <input type="text" class="input-block__input" name="name" id="name-field" placeholder="Введите ваше имя *"
+                required>
             </p>
             <p class="input-block__item input-block__item--input">
               <label class="input-block__fullname-label" for="patronymic-field">Отчество:</label>
@@ -92,31 +95,38 @@
             <div class="input-block__list">
               <div class="input-block__item-checkbox">
                 <div class="input-block__checkbox-container">
-                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="selfie" id="selfie-field" checked>
+                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="selfie"
+                    id="selfie-field" checked>
                   <label class="input-block__text input-block__checkbox-text" for="selfie-field">Сделал селфи с акулой</label>
                 </div>
                 <div class="input-block__checkbox-container">
-                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="beach" id="beach-field" checked>
+                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="beach"
+                    id="beach-field" checked>
                   <label class="input-block__text input-block__checkbox-text" for="beach-field">Обгорел на пляже</label>
                 </div>
               </div>
               <div class="input-block__item-checkbox">
                 <div class="input-block__checkbox-container">
-                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="cinema-star" id="cinema-star-field">
-                  <label class="input-block__text input-block__checkbox-text" for="cinema-star-field">Видел Чака Норриса</label>
+                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="cinema-star"
+                    id="cinema-star-field">
+                  <label class="input-block__text input-block__checkbox-text" for="cinema-star-field">Видел Чака
+                    Норриса</label>
                 </div>
                 <div class="input-block__checkbox-container">
-                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="souvenir" id="souvenir-field">
+                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="souvenir"
+                    id="souvenir-field">
                   <label class="input-block__text input-block__checkbox-text" for="souvenir-field">Накупил сувениров</label>
                 </div>
               </div>
               <div class="input-block__item-checkbox">
                 <div class="input-block__checkbox-container">
-                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="tower" id="tower-field" checked>
+                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="tower"
+                    id="tower-field" checked>
                   <label class="input-block__text input-block__checkbox-text" for="tower-field">Удержал башню</label>
                 </div>
                 <div class="input-block__checkbox-container">
-                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="hotel" id="hotel-field">
+                  <input class="input-block__input input-block__input--checkbox visually-hidden" type="checkbox" name="hotel"
+                    id="hotel-field">
                   <label class="input-block__text input-block__checkbox-text" for="hotel-field">Разгромил отель</label>
                 </div>
               </div>
@@ -130,11 +140,13 @@
             <div class="filters-group__contact-info">
               <p class="input-block__item input-block__item--input">
                 <label class="input-block__contacts-label  input-block__phone" for="phone-field">Номер телефона</label>
-                <input type="tel" class="input-block__input input-block__contacts-input" name="phone" id="phone-field" placeholder="Номер, пожалуйста" pattern="\+7\-[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                <input type="tel" class="input-block__input input-block__contacts-input" name="phone" id="phone-field"
+                  placeholder="Номер, пожалуйста" pattern="\+7\-[0-9]{3}-[0-9]{3}-[0-9]{4}">
               </p>
               <p class="input-block__item input-block__item--input">
                 <label class="input-block__contacts-label input-block__email" for="email-field">Адрес почты</label>
-                <input type="email" class="input-block__input input-block__contacts-input" name="email" id="email-field" placeholder="Введите почту *" required>
+                <input type="email" class="input-block__input input-block__contacts-input" name="email" id="email-field"
+                  placeholder="Введите почту *" required>
               </p>
             </div>
           </div>
@@ -145,16 +157,18 @@
           <div class="filters-group__narrow">
             <ul class="input-block__list input-block__list-radio">
               <li class="input-block__item-radio">
-                <input class="input-block__input input-block__input--radiobutton visually-hidden" type="radio" name="phone-type" id="radio1"
-                  checked>
+                <input class="input-block__input input-block__input--radiobutton visually-hidden" type="radio" name="phone-type"
+                  id="radio1" checked>
                 <label class="input-block__text input-block__radio-text" for="radio1">Pink для iOS</label>
               </li>
               <li class="input-block__item-radio">
-                <input class="input-block__input input-block__input--radiobutton visually-hidden" type="radio" name="phone-type" id="radio2">
+                <input class="input-block__input input-block__input--radiobutton visually-hidden" type="radio" name="phone-type"
+                  id="radio2">
                 <label class="input-block__text input-block__radio-text" for="radio2">Pink на Android</label>
               </li>
               <li class="input-block__item-radio">
-                <input class="input-block__input input-block__input--radiobutton visually-hidden" type="radio" name="phone-type" id="radio3">
+                <input class="input-block__input input-block__input--radiobutton visually-hidden" type="radio" name="phone-type"
+                  id="radio3">
                 <label class="input-block__text input-block__radio-text" for="radio3">Windows Phone</label>
               </li>
             </ul>
@@ -164,14 +178,15 @@
         <fieldset class="filters-group filters-group__emotions input-block">
           <h3 class="filters-group__title">Опишите свои эмоции</h3>
           <div class="filters-group__wide">
-            <textarea class="input-block__input input-block__input--textarea" name="emotions" id="emotions-field" cols="30" rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            <textarea class="input-block__input input-block__input--textarea" name="emotions" id="emotions-field" cols="30"
+              rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </div>
         </fieldset>
 
         <div class="competition__btn-box competition__container">
           <button class="competition__btn btn" type="submit">Отправить форму</button>
           <small class="competition__legend competition__legend--mobile">
-              <sup class="competition__footnote">*</sup> — обязательные поля
+            <sup class="competition__footnote">*</sup> — обязательные поля
           </small>
           <small class="competition__legend competition__legend--desktop">
             <sup class="competition__footnote">*</sup> — обязательные для заполнения поля
@@ -193,7 +208,8 @@
 
   <div class="pop-up pop-up__ok">
     <h2 class="pop-up__title">Ваша заявка отправлена</h2>
-    <p class="pop-up__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и
+    <p class="pop-up__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим
+      ее и
       <br> оповестим вас.</p>
     <div class="pop-up__button-wrapper">
       <button class="pop-up__btn pop-up__btn--close" type="button">Закрыть окно</button>
