делает интерактивные элементы доступными для незрячих и слабовидящих пользователей

--- a/source/form.html
+++ b/source/form.html
@@ -75,12 +75,12 @@
             <p class="input-block__item input-block__item--input">
               <label class="input-block__fullname-label" for="surname-field">Фамилия:</label>
               <input type="text" class="input-block__input" name="surname" id="surname-field" placeholder="Укажите фамилию *"
-                autofocus required>
+                autofocus required aria-required="true">
             </p>
             <p class="input-block__item  input-block__item--input">
               <label class="input-block__fullname-label" for="name-field">Имя:</label>
               <input type="text" class="input-block__input" name="name" id="name-field" placeholder="Введите ваше имя *"
-                required>
+                required aria-required="true">
             </p>
             <p class="input-block__item input-block__item--input">
               <label class="input-block__fullname-label" for="patronymic-field">Отчество:</label>
@@ -146,7 +146,7 @@
               <p class="input-block__item input-block__item--input">
                 <label class="input-block__contacts-label input-block__email" for="email-field">Адрес почты</label>
                 <input type="email" class="input-block__input input-block__contacts-input" name="email" id="email-field"
-                  placeholder="Введите почту *" required>
+                  placeholder="Введите почту *" required aria-required="true">
               </p>
             </div>
           </div>
