--- a/source/photo.html
+++ b/source/photo.html
@@ -86,7 +86,7 @@
             <p class="user-photo__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!
             </p>
             <footer class="user-photo__footer">
-              <button class="user-photo__btn" type="button"></button>
+              <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
               <span class="user-photo__like">Нравится:
                 <span class="user-photo__counter">215</span>
               </span>
@@ -113,7 +113,7 @@
                 </p>
                 <p class="user-photo__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">356</span>
                   </span>
@@ -139,7 +139,7 @@
                 </p>
                 <p class="user-photo__description">Соседи будут рады!</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">666</span>
                   </span>
@@ -165,7 +165,7 @@
                 </p>
                 <p class="user-photo__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">215</span>
                   </span>
@@ -191,7 +191,7 @@
                 </p>
                 <p class="user-photo__description">Самая кубанская в мире!</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">4</span>
                   </span>
@@ -217,7 +217,7 @@
                 </p>
                 <p class="user-photo__description">Где снег-то?</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">150</span>
                   </span>
@@ -243,7 +243,7 @@
                 </p>
                 <p class="user-photo__description">Всем GM и взаимные лайки!</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">2560</span>
                   </span>
@@ -274,21 +274,21 @@
             <ul class="photo-upload__btn-list">
               <li class="photo-upload__btn-item">
                 <button class="photo-upload__tool" type="button">
-                  <svg class="photo-upload__svg photo-upload__svg-crop" width="44" height="44">
+                  <svg class="photo-upload__svg photo-upload__svg-crop" width="44" height="44" aria-label="обрезать фото">
                     <use xlink:href="#icon-editor-crop"></use>
                   </svg>
                 </button>
               </li>
               <li class="photo-upload__btn-item">
                 <button class="photo-upload__tool" type="button">
-                  <svg class="photo-upload__svg photo-upload__svg-fill" width="48" height="43">
+                  <svg class="photo-upload__svg photo-upload__svg-fill" width="48" height="43" aria-label="настроить насыщенность">
                     <use xlink:href="#icon-editor-fill"></use>
                   </svg>
                 </button>
               </li>
               <li class="photo-upload__btn-item">
                 <button class="photo-upload__tool" type="button">
-                  <svg class="photo-upload__svg photo-upload__svg-contrast" width="32" height="32">
+                  <svg class="photo-upload__svg photo-upload__svg-contrast" width="32" height="32" aria-label="настроить контраст">
                     <use xlink:href="#icon-editor-contrast"></use>
                   </svg>
                 </button>
