--- a/source/index.html
+++ b/source/index.html
@@ -357,7 +357,9 @@
           <ul class="contacts__list">
             <li class="contacts__item contacts__phone">
               <h3 class="contacts__title">Звоните:</h3>
-              <p class="contacts__text">+7 (812) 555-66-66</p>
+              <p class="contacts__text">
+                <a class="contacts__link contacts__text" href="tel:+7(812)555-66-66">+7 (812) 555-66-66</a>
+              </p>
             </li>
             <li class="contacts__item contacts__mail">
               <h3 class="contacts__title">Пишите:</h3>
