--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
   <div style="display: none">
     <include src="source/img/sprite.svg"></include>
   </div>
-  <header class="header header__main-page header--closed">
+  <header class="header header__main-page header--closed header__main-page--nojs">
 
     <div class="header__top-box">
       <div class="header__wrapper">
