убирает из  разметки лишний элемент и заменяет его на псевдоэлемет(подчеркивание ссылок)

--- a/source/index.html
+++ b/source/index.html
@@ -174,9 +174,7 @@
             </h2>
             <p class="effect__text">Британские ученые провели исследования и доказали,&#160;<br class="effect__wrap">что
               положительный эффект&#160;<br>от использования приложения длится целые сутки!</p>
-            <a class="effect__link" href="#">
-              <span class="effect__span">Узнать больше об исследовании</span>
-            </a>
+            <a class="effect__link effect__link--underline" href="#">Узнать больше об исследовании</a>
           </div>
         </div>
       </section>
@@ -363,10 +361,8 @@
             </li>
             <li class="contacts__item contacts__mail">
               <h3 class="contacts__title">Пишите:</h3>
-              <p class="contacts__text">
-                <span class="contacts__span">
-                  <a class="contacts__link">mail@htmlacademy.ru</a>
-                </span>
+              <p class="contacts__text contacts__text--underline">
+                <a class="contacts__link">mail@htmlacademy.ru</a>
               </p>
             </li>
             <li class="contacts__item contacts__adress">
