--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
     background-repeat: no-repeat;
     background-position: 50% 0;
     /* По умолчанию показывается мобильный макет */
-    background-image: url("/preview/pink-index-mobile.jpg");
+    background-image: url("preview/pink-index-mobile.jpg");
   }
   /* Планшет */
   @media (min-width: 660px) {
@@ -32,7 +32,7 @@
     }
   }
 </style>
-  <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
+  <link href="node_modules/pixel-glass/styles.css" rel="stylesheet">
   <script src="../node_modules/pixel-glass/script.js"></script>
   <!-- // Pixel Glass -->
 </head>
