--- a/source/index.html
+++ b/source/index.html
@@ -336,7 +336,7 @@
             <li class="contacts__item contacts__mail">
               <h3 class="contacts__title">Пишите:</h3>
               <p class="contacts__text contacts__text--underline">
-                <a class="contacts__link">mail@htmlacademy.ru</a>
+                <a class="contacts__link" tabindex="0">mail@htmlacademy.ru</a>
               </p>
             </li>
             <li class="contacts__item contacts__adress">
