--- a/source/photo.html
+++ b/source/photo.html
@@ -5,11 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HTML Academy: Пинк</title>
+  <link rel="preload" href="fonts/opensans.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/opensansbold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/opensanslight.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <div style="display:none">
+  <div style="display: none">
     <include src="source/img/sprite.svg"></include>
   </div>
   <header class="header header__not-main header--closed">
@@ -66,13 +69,13 @@
     <div class="photo__best">
       <div class="photo__wide-img">
         <picture>
-          <source type="image/webp" media="(min-width: 960px)" srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x"/>
+          <source type="image/webp" media="(min-width: 960px)" srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x" />
           <source type="image/webp" media="(min-width: 660px)" srcset="img/panorama-tablet@1x.webp 1x, img/panorama-tablet@2x.webp 2x">
           <source type="image/webp" srcset="img/panorama-mobile@1x.webp 1x, img/panorama-mobile@2x.webp 2x">
           <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
           <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
-          <img class="photo__img" src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" width="320" height="137"
-            alt="Панорама дня">
+          <img class="photo__img" src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" width="320"
+            height="137" alt="Панорама дня">
         </picture>
       </div>
     </div>
@@ -83,10 +86,11 @@
             <p class="user-photo__title">Анна
               <span class="user-photo__span">(5 минут назад)</span>
             </p>
-            <p class="user-photo__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!
+            <p class="user-photo__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую
+              трансляцию в перископе, задавайте свои вопросы!
             </p>
             <footer class="user-photo__footer">
-              <button class="user-photo__btn" type="button"></button>
+              <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
               <span class="user-photo__like">Нравится:
                 <span class="user-photo__counter">215</span>
               </span>
@@ -104,7 +108,8 @@
                   <source type="image/webp" srcset="img/photo-car-mobile@1x.webp 1x, img/photo-car-mobile@2x.webp 2x">
                   <source media="(min-width: 960px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x">
-                  <img class="user-photo__img" src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" width="280" height="180" alt="">
+                  <img class="user-photo__img" src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x"
+                    width="280" height="180" alt="">
                 </picture>
               </div>
               <div class="user-photo__info user-photo__wrapper">
@@ -113,7 +118,7 @@
                 </p>
                 <p class="user-photo__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">356</span>
                   </span>
@@ -130,7 +135,8 @@
                   <source type="image/webp" srcset="img/photo-drumset-mobile@1x.webp 1x, img/photo-drumset-mobile@2x.webp 2x">
                   <source media="(min-width: 960px)" srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x">
-                  <img class="user-photo__img" src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" width="280" height="180" alt="">
+                  <img class="user-photo__img" src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x"
+                    width="280" height="180" alt="">
                 </picture>
               </div>
               <div class="user-photo__info user-photo__wrapper">
@@ -139,7 +145,7 @@
                 </p>
                 <p class="user-photo__description">Соседи будут рады!</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">666</span>
                   </span>
@@ -156,7 +162,8 @@
                   <source type="image/webp" srcset="img/photo-window-mobile@1x.webp 1x, img/photo-window-mobile@2x.webp 2x">
                   <source media="(min-width: 960px)" srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x">
-                  <img class="user-photo__img" src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" width="280" height="180" alt="">
+                  <img class="user-photo__img" src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x"
+                    width="280" height="180" alt="">
                 </picture>
               </div>
               <div class="user-photo__info user-photo__wrapper">
@@ -165,7 +172,7 @@
                 </p>
                 <p class="user-photo__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">215</span>
                   </span>
@@ -182,7 +189,8 @@
                   <source type="image/webp" srcset="img/photo-fair-mobile@1x.webp 1x, img/photo-fair-mobile@2x.webp 2x">
                   <source media="(min-width: 960px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x">
-                  <img class="user-photo__img" src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x" width="280" height="180" alt="">
+                  <img class="user-photo__img" src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x"
+                    width="280" height="180" alt="">
                 </picture>
               </div>
               <div class="user-photo__info user-photo__wrapper">
@@ -191,7 +199,7 @@
                 </p>
                 <p class="user-photo__description">Самая кубанская в мире!</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">4</span>
                   </span>
@@ -208,7 +216,8 @@
                   <source type="image/webp" srcset="img/photo-pov-mobile@1x.webp 1x, img/photo-pov-mobile@2x.webp 2x">
                   <source media="(min-width: 960px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x">
-                  <img class="user-photo__img" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" width="280" height="180" alt="">
+                  <img class="user-photo__img" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x"
+                    width="280" height="180" alt="">
                 </picture>
               </div>
               <div class="user-photo__info user-photo__wrapper">
@@ -217,7 +226,7 @@
                 </p>
                 <p class="user-photo__description">Где снег-то?</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">150</span>
                   </span>
@@ -234,7 +243,8 @@
                   <source type="image/webp" srcset="img/photo-wing-mobile@1x.webp 1x, img/photo-wing-mobile@2x.webp 2x">
                   <source media="(min-width: 960px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x">
-                  <img class="user-photo__img" src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" width="280" height="180" alt="">
+                  <img class="user-photo__img" src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x"
+                    width="280" height="180" alt="">
                 </picture>
               </div>
               <div class="user-photo__info user-photo__wrapper">
@@ -243,7 +253,7 @@
                 </p>
                 <p class="user-photo__description">Всем GM и взаимные лайки!</p>
                 <footer class="user-photo__footer">
-                  <button class="user-photo__btn" type="button"></button>
+                  <button class="user-photo__btn" type="button" aria-label="Поставить лайк"></button>
                   <span class="user-photo__like">Нравится:
                     <span class="user-photo__counter">2560</span>
                   </span>
@@ -266,7 +276,8 @@
             <source type="image/webp" srcset="img/photo-road-mobile@1x.webp 1x, img/photo-road-mobile@2x.webp 2x">
             <source media="(min-width: 960px)" srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x">
             <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x">
-            <img src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" width="280" height="180" alt="">
+            <img src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" width="280" height="180"
+              alt="">
           </picture>
         </div>
         <div class="photo-upload__container">
@@ -274,21 +285,21 @@
             <ul class="photo-upload__btn-list">
               <li class="photo-upload__btn-item">
                 <button class="photo-upload__tool" type="button">
-                  <svg class="photo-upload__svg photo-upload__svg-crop" width="44" height="44">
+                  <svg class="photo-upload__svg photo-upload__svg-crop" width="44" height="44" aria-label="обрезать фото">
                     <use xlink:href="#icon-editor-crop"></use>
                   </svg>
                 </button>
               </li>
               <li class="photo-upload__btn-item">
                 <button class="photo-upload__tool" type="button">
-                  <svg class="photo-upload__svg photo-upload__svg-fill" width="48" height="43">
+                  <svg class="photo-upload__svg photo-upload__svg-fill" width="48" height="43" aria-label="настроить насыщенность">
                     <use xlink:href="#icon-editor-fill"></use>
                   </svg>
                 </button>
               </li>
               <li class="photo-upload__btn-item">
                 <button class="photo-upload__tool" type="button">
-                  <svg class="photo-upload__svg photo-upload__svg-contrast" width="32" height="32">
+                  <svg class="photo-upload__svg photo-upload__svg-contrast" width="32" height="32" aria-label="настроить контраст">
                     <use xlink:href="#icon-editor-contrast"></use>
                   </svg>
                 </button>
