делает фон на всю ширину окна для .infomation .effect

--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,10 @@
         <p class="promo__text">Устали от серости мегаполиса?</p>
         <p class="promo__text">Нам есть, что вам предложить!</p>
       </div>
-      <section class="information">
+    </div>
+
+    <section class="information">
+      <div class="main-page__wrapper">
         <h2 class="visually-hidden">Информация о приложении</h2>
         <div class="information__wrapper container">
           <div class="information__container">
@@ -128,15 +131,18 @@
               </li>
               <li class="information__item information__item-3">
                 <h3 class="information__title">Заводит новых друзей</h3>
-                <p class="information__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
+                <p class="information__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
+                  заводите
                   новых</p>
               </li>
             </ul>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="effect">
+    <section class="effect">
+      <div class="main-page__wrapper">
         <div class="effect__container">
           <div class="effect__timer">
             <svg class="timer" width="238" height="276">
@@ -151,64 +157,65 @@
             <a class="effect__link effect__link--underline" href="#">Узнать больше об исследовании</a>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="review">
-        <div class="review__wrapper slider">
-          <h2 class="visually-hidden">Отзывы пользователей</h2>
-          <div class="review__list slider__list">
-            <div class="review__item review__item--first slider__item">
-              <div class="review__content">
-                <cite class="review__title">Николай Петров</cite>
-                <p class="review__about"> 25 лет, водитель трамвая</p>
-              </div>
-              <p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
-                серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+    <section class="review">
+      <div class="review__wrapper slider">
+        <h2 class="visually-hidden">Отзывы пользователей</h2>
+        <div class="review__list slider__list">
+          <div class="review__item review__item--first slider__item">
+            <div class="review__content">
+              <cite class="review__title">Николай Петров</cite>
+              <p class="review__about"> 25 лет, водитель трамвая</p>
             </div>
-            <div class="review__item review__item--second slider__item">
-              <div class="review__content">
-                <cite class="review__title">Николай Петров</cite>
-                <p class="review__about"> 25 лет, водитель трамвая</p>
-              </div>
-              <p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
-                серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
-            </div>
-            <div class="review__item review__item--third slider__item">
-              <div class="review__content">
-                <cite class="review__title">Николай Петров</cite>
-                <p class="review__about"> 25 лет, водитель трамвая</p>
-              </div>
-              <p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
-                серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
-            </div>
+            <p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
+              серые вещи! А еще я познакомился
+              со своей будущей женой в комментариях к выложенной фотографии!»</p>
           </div>
-          <button class="review__toggle review__toggle--prev" tabindex="0">
-            <svg class="arrow" width="22" height="41">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-review-arrow-left"></use>
-            </svg>предыдущий отзыв
-          </button>
-          <button class="review__toggle review__toggle--next" tabindex="0">
-            <svg class="arrow" width="22" height="41">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-review-arrow-right"></use>
-            </svg>следующий отзыв
-          </button>
-          <p class="review__toggles slider">
-            <button class="slider__toggle slider__toggle--check" type="button">
-              <span class="visually-hidden">1</span>
-            </button>
-            <button class="slider__toggle" type="button">
-              <span class="visually-hidden">2</span>
-            </button>
-            <button class="slider__toggle" type="button">
-              <span class="visually-hidden">3</span>
-            </button>
-          </p>
+          <div class="review__item review__item--second slider__item">
+            <div class="review__content">
+              <cite class="review__title">Николай Петров</cite>
+              <p class="review__about"> 25 лет, водитель трамвая</p>
+            </div>
+            <p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
+              серые вещи! А еще я познакомился
+              со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </div>
+          <div class="review__item review__item--third slider__item">
+            <div class="review__content">
+              <cite class="review__title">Николай Петров</cite>
+              <p class="review__about"> 25 лет, водитель трамвая</p>
+            </div>
+            <p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
+              серые вещи! А еще я познакомился
+              со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </div>
         </div>
-      </section>
-    </div>
+        <button class="review__toggle review__toggle--prev" tabindex="0">
+          <svg class="arrow" width="22" height="41">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-review-arrow-left"></use>
+          </svg>предыдущий отзыв
+        </button>
+        <button class="review__toggle review__toggle--next" tabindex="0">
+          <svg class="arrow" width="22" height="41">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-review-arrow-right"></use>
+          </svg>следующий отзыв
+        </button>
+        <p class="review__toggles slider">
+          <button class="slider__toggle slider__toggle--check" type="button">
+            <span class="visually-hidden">1</span>
+          </button>
+          <button class="slider__toggle" type="button">
+            <span class="visually-hidden">2</span>
+          </button>
+          <button class="slider__toggle" type="button">
+            <span class="visually-hidden">3</span>
+          </button>
+        </p>
+      </div>
+    </section>
+
 
     <section class="price">
       <div class="price__container main-page__wrapper">
