редактирует положение фона у price

--- a/source/index.html
+++ b/source/index.html
@@ -193,12 +193,12 @@
           </div>
         </div>
         <button class="review__toggle review__toggle--prev" tabindex="0">
-          <svg class="arrow" width="22" height="41">
+          <svg class="arrow" width="22" height="41" title="предыдущий отзыв">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-review-arrow-left"></use>
           </svg>предыдущий отзыв
         </button>
         <button class="review__toggle review__toggle--next" tabindex="0">
-          <svg class="arrow" width="22" height="41">
+          <svg class="arrow" width="22" height="41" title="следующий отзыв">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-review-arrow-right"></use>
           </svg>следующий отзыв
         </button>
